Small css fix for content margin on mobile screen

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,7 +2,7 @@
   .main-container {
 
     .content {
-      margin-top: 120px;
+      margin-top: 150px;
 
       .item {
         border-bottom: 2px solid $darkblue;
